chore: :wrench: added some configurations

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll --coverage",
     "eject": "react-scripts eject",
     "prepare": "husky"
   },
@@ -45,5 +45,12 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "jest": "^27.5.1"
-  }
+  },
+  "jest": {
+    "coverageThreshold": {
+        "global": {
+            "lines": 80
+        }
+    }
+}
 }
