--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "typescript": "^5.5.4",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +45,7 @@
     "@commitlint/config-conventional": "^19.4.1",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "husky": "^9.1.5",
     "jest": "^27.5.1"
   },
   "jest": {
