--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll --coverage --detectOpenHandles",
-    "eject": "react-scripts eject", 
+    "eject": "react-scripts eject",
     "prepare": "husky"
   },
   "eslintConfig": {
@@ -28,7 +28,10 @@
       "react-app/jest"
     ],
     "rules": {
-      "semi": ["error", "always"]
+      "semi": [
+        "error",
+        "always"
+      ]
     }
   },
   "browserslist": {
@@ -46,10 +49,12 @@
   "devDependencies": {
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.1",
+    "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "husky": "^9.1.5",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "tailwindcss": "^3.4.10"
   },
   "jest": {
     "coverageThreshold": {
