--- a/package.json
+++ b/package.json
@@ -22,18 +22,6 @@
     "eject": "react-scripts eject",
     "prepare": "husky"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "rules": {
-      "semi": [
-        "error",
-        "always"
-      ]
-    }
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -52,6 +40,10 @@
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-unused-imports": "^4.1.3",
     "husky": "^9.1.5",
     "jest": "^27.5.1",
     "tailwindcss": "^3.4.10"
