--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES2022",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
@@ -10,9 +10,11 @@
             "@components/*": ["components/*"],
             "@assets/*": ["assets/*"]
         },
+        "moduleResolution": "Node",
         "resolveJsonModule": true,
         "jsx": "react"
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist"],
+    
 }
