feat: :sparkles: new input props and their test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,6 @@
                 "argsIgnorePattern": "^_"
             }
         ],
-        "no-empty-function": "off",
+        "no-empty-function": "off"
     }
 }
