feat: :sparkles: created the digimon detail component and its test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,8 @@
                 "argsIgnorePattern": "^_"
             }
         ],
-        "no-empty-function": "off"
+        "no-empty-function": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "testing-library/no-render-in-setup": ["error", {"allowTestingFrameworkSetupHook": "beforeEach"}]
     }
 }
